syntax = "proto3";

package id;

option go_package = "./proto;id";


message GenerateRequest {
	string type = 1;
}

message GenerateResponse {
	string id = 1;
	string type = 2;
}

message TypesRequest {}

message TypesResponse {
	repeated string types = 1;
}